<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<item android:title="Main Application">

    <menu>
    <group android:checkableBehavior="single"
        android:menuCategory="container">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_menu" />
        <item
            android:id="@+id/nav_beneficiary"
            android:icon="@drawable/ic_care"
            android:title="@string/menu_beneficiary" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/ic_food_donation"
            android:title="@string/menu_product" />
        <item
            android:id="@+id/nav_donation"
            android:icon="@drawable/ic_box"
            android:title="@string/menu_dons" />
    </group>
    </menu>
</item>
      <item android:title="Administration">
          <menu>
              <group android:checkableBehavior="single"
                  android:menuCategory="container">
              <item android:id="@+id/nav_profile"
                  android:icon="@drawable/ic_user_profil"
                  android:title="@string/mon_profile"/>
              <item android:id="@+id/nav_add_user"
                  android:icon="@drawable/ic_add_profile"
                  android:title="@string/add_user"/>
              </group>

          </menu>
      </item>


</menu>
