<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_beneficiary"
        android:name="com.mar.solicity.ui.beneficiary.BeneficiaryFragment"
        android:label="@string/menu_beneficiary"
        tools:layout="@layout/fragment_beneficiary">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
          />
    </fragment>

    <fragment
        android:id="@+id/nav_product"
        android:name="com.mar.solicity.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.mar.solicity.ui.UserProfile"
        android:label="Mon Profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/nav_add_user"
        android:name="com.mar.solicity.ui.AddUser"
        android:label="Ajouter un utilisateur"
        tools:layout="@layout/fragment_add_user" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mar.solicity.ui.HomePage"
        android:label="Home Page"
        tools:layout="@layout/fragment_home_page" />

    <fragment
        android:id="@+id/nav_donation"
        android:name="com.mar.solicity.ui.donation.DonationFragment"
        android:label="@string/menu_dons"
        tools:layout="@layout/fragment_donation" />
</navigation>