<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        style="@style/loginHeader"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginStart="5dp"
        android:text="Register" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:id="@+id/input_layout_register_name"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_text_name"
            style="@style/modifiedEditText"
            android:hint="@string/name_register"
            android:inputType="textPersonName"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_email"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_text_email"
            style="@style/modifiedEditText"
            android:hint="Adresse E-mail"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_phone"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_text_phone"
            style="@style/modifiedEditText"
            android:hint="@string/phone_register"
            android:inputType="phone"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_register_password"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_text_password"
            style="@style/modifiedEditText"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_register"
        style="@style/loginButton"
        android:text="S'inscrire"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <TextView
        style="@style/parent"
        android:id="@+id/text_view_login"
        android:layout_marginTop="20dp"
        android:textColor="@color/primaryTextColor"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/alegreya"
        android:text="@string/open_signIn"
        android:textAlignment="center"
        android:textSize="16sp"/>
<!--        android:layout_marginStart="70dp"/>-->

</LinearLayout>