<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".loginandregister.PasswordResetActivity"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:onClick="hideKeyboard" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/reset_title"
                    android:textColor="@color/whiteTextColor"
                    android:textSize="24dp"/>

                <ImageView
                    android:layout_width="166dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_login_hero" />
            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:textAlignment="center"
                        android:text="@string/Reset_Password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_reset_email"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/reset_text_email"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="Addresse E-mail"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:id="@+id/button_reset_password"
                        style="@style/loginButton"
                        android:layout_width="255dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/reset_pass_btn"
                        android:textAlignment="center"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="20dp"
                        app:spinning_bar_width="4dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"
        android:adjustViewBounds="false"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat"/>

</RelativeLayout>